checkbox was corrected by shifting overlay on a side

--- a/Realization/frontend/czechidm-core/src/css/main.less
+++ b/Realization/frontend/czechidm-core/src/css/main.less
@@ -4,13 +4,12 @@
 @import "../content/About.less";
 @import "../content/identity/IdentityDetail.less";
 
-
 // Fixed a wrong spacing 
 .makeStyles-error-44 {
     margin-right: 11px;
 }
 
-//Horizontal Scroll bar in a stack trace inserted int the text area
+//Horizontal Scroll bar in a stack trace inserted into the text area
 div.customTextAre.form-group{
         textarea {   
                overflow-x: auto;
@@ -27,3 +26,10 @@ div.customTextAreNot.form-group {
 .makeStyles-sidebar-14.sidebar{
     overflow-y: auto;
 }
+
+//
+@media (min-width: 600px){
+.MuiToolbar-regular {
+    min-height: 64px;
+    margin-right: 20px;
+}}
